--- a/MDCMS.Client/Layout/AuthLayout.razor
+++ b/MDCMS.Client/Layout/AuthLayout.razor
@@ -1,20 +1,40 @@
 ﻿@inherits LayoutComponentBase
 @using MudBlazor
 
-<MudGrid Style="height:100vh; margin:0;">
-    <!-- Left side with background image -->
-    <MudItem xs="0" md="4" Style="padding:0;">
-        <div style="
-            height:100%;
-            background:url('/images/bg_1.png') center center no-repeat;
-            background-size:cover;">
-        </div>
-    </MudItem>
+<div class="background-container">
+    <MudPaper Class="d-flex justify-center align-center"
+              Style="height:100vh; background-color:transparent; box-shadow:none;">
+        @Body
+    </MudPaper>
+</div>
 
-    <!-- Right side for login form (Body placeholder) -->
-    <MudItem xs="12" md="8" Class="d-flex justify-center align-center" Style="background:#f5f7fb;">
-        <MudPaper Elevation="8" Class="pa-8" Style="width:380px; border-radius:16px;">
-            @Body
-        </MudPaper>
-    </MudItem>
-</MudGrid>
+<style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden; /* prevent scrollbars */
+    }
+
+    .background-container {
+        position: relative;
+        height: 100vh;
+        width: 100vw;
+        overflow: hidden;
+    }
+
+        /* Background image with 70% opacity */
+        .background-container::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            background: url('/images/bg_1.png') no-repeat center center;
+            background-size: cover;
+            opacity: 0.7; /* 70% */
+            z-index: -1; /* Push it behind content */
+        }
+
+</style>
